--- a/confirmation.html
+++ b/confirmation.html
@@ -6,7 +6,7 @@
   <title>Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body class="mat-typography">
@@ -21,18 +21,17 @@
 
     .confirmation {
       background-color: #2a3c5a;
-      width: 100vw;
+      width: calc(100%-20%);
       height: 100vh;
       color: #CCD6F6;
       max-width: 1140px;
-      margin-left: auto;
-      margin-right: auto;
+      margin-left: 10%;
+      margin-right: 10%;
       margin-top: 58px;
       padding: 50px;
     }
 
     .confirmation h1 {
-
       font-size: 48px;
       margin-bottom: 50px;
     }
@@ -42,7 +41,7 @@
     }
 
     .back-button {
-      margin-left: 500px;
+
       text-align: center;
       background-color: #1e3563;
       height: 40px;
@@ -58,12 +57,11 @@
       color: #2a3c5a;
     }
   </style>
+
   <div class="confirmation">
     <h1>Thank you!</h1>
     <p>Your message has been successfully sent. I will contact you very soon!</p>
-    <button onclick="window.history.go(-1); return false;" class="back-button">
-      BACK
-    </button>
+    <button onclick="window.history.go(-1); return false;" class="back-button">BACK</button>
   </div>
 </body>
 
