--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,23 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" href="#">
+  <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+  <link rel="stylesheet" href="fonts.css" type="text/html">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="d9117a58-f278-4146-8f32-96113f1edaa8"
+    data-blockingmode="auto" type="text/javascript"></script>
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
-    <script>AOS.init();</script>
+  <script>AOS.init();</script>
 </body>
+
 </html>
